<resources>
    <string name="app_name">Image To PDF</string>
    <string name="vw_rationale_storage">Need Reading Storage Permission for Files</string>

    <string name="gallery">Gallery</string>
    <string name="select_imgs">Select Images</string>
    <string name="select_img">Select Image</string>
    <string name="sorting">Sorting</string>
    <string name="selected_img">Selected Images</string>
    <string name="result">Result</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="no_recent">No recent data</string>
    <string name="no_data">No data found</string>
    <string name="no_bm">No bookmark data</string>
    <string name="share_frnd">Share with friends</string>
    <string name="rate">Rate this App</string>
    <string name="policy">Private Policy</string>
    <string name="generate">Generate</string>
    <string name="feedback">Give us Feedback</string>
    <string name="bookmark">Bookmark</string>
    <string name="setting">Setting</string>
    <string name="set_pswd">Set Password</string>
    <string name="add_bookmark">Add To Bookmark</string>
    <string name="add_pswd_dialog">Add Password to </string>
    <string name="recent">Recent</string>
    <string name="all">All PDF</string>
    <string name="success">Converted To PDF\nSuccessfully!</string>
    <string name="delete_ques">Are you sure you want to delete ?</string>
    <string name="edit">Edit</string>
    <string name="crop">Crop</string>
    <string name="draw">Draw</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share PDF</string>
    <string name="open">Open PDF File</string>
    <string name="download">Download PDF</string>
    <string name="tip">Drag image to reorder</string>
    <string name="tip1">Tip</string>
    <string name="save">Save</string>
    <string name="size">Size</string>
    <string name="convert_to_pdf">Convert to PDF</string>
    <string name="convert_to_pdf_settings">Convert to PDF Settings</string>
    <string name="file_name">File Name</string>
    <string name="file_path">File Path</string>
    <string name="compress_images">Compress Images</string>
    <string name="insert_white_margins">Insert White Margins?</string>
    <string name="protect_with_password">Protect with password?</string>
    <string name="password">Password</string>
    <string name="orientation">Orientation</string>
    <string name="enter_pswd">Enter Password </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>