<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingRL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_20sdp">

    <View
        android:layout_width="@dimen/_50sdp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@color/grey_btn" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:fontFamily="@font/circular_std"
        android:paddingHorizontal="@dimen/_15sdp"
        android:text="@string/convert_to_pdf_settings"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:scrollbarSize="0dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/ic_edit_box">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgPdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    card_view:srcCompat="@drawable/ic_file_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etFileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/imgPdf"
                    android:layout_toRightOf="@+id/imgPdf"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/circular_std"
                    android:hint="@string/file_name"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="@color/teal_700"
                    android:textColorHint="@color/text_color" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/switchCompress"
                    android:layout_toLeftOf="@+id/switchCompress"
                    android:fontFamily="@font/circular_std"
                    android:text="@string/compress_images"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchCompress"
                    style="@style/BrandedSwitch.control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBarCompress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:maxHeight="5dip"
                android:minHeight="3dip"
                android:progress="50"
                android:thumb="@drawable/ic_thumb"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/switchMargin"
                    android:layout_toLeftOf="@+id/switchMargin"
                    android:fontFamily="@font/circular_std"
                    android:text="@string/insert_white_margins"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchMargin"
                    style="@style/BrandedSwitch.control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:checked="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/switchProtect"
                    android:layout_toLeftOf="@+id/switchProtect"
                    android:fontFamily="@font/circular_std"
                    android:text="@string/protect_with_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switchProtect"
                    style="@style/BrandedSwitch.control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    card_view:useMaterialThemeColors="true" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlProtectPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_7sdp"
                android:background="@drawable/ic_edit_box"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgLock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    card_view:srcCompat="@drawable/ic_lock" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/imgLock"
                    android:layout_toRightOf="@+id/imgLock"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/circular_std"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="@color/teal_700"
                    android:textColorHint="@color/text_color1" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/circular_std"
                    android:text="@string/orientation"
                    android:textColor="#707070"
                    android:textSize="@dimen/_12sdp" />

                <RelativeLayout
                    android:id="@+id/rlSpin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginVertical="@dimen/_5sdp">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner"
                        style="@style/SpinnerTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/_7sdp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_toRightOf="@id/spinner"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_spinner_arrow" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/grey_btn_bg">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/circular_std"
                android:gravity="center_horizontal"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/cancel"
                android:textSize="@dimen/_13sdp" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/tvOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@color/theme_color1"
            card_view:cardCornerRadius="@dimen/_7sdp"
            card_view:cardElevation="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/circular_std"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="Convert"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>


